fix mobile spacing. removed combat reducer

--- a/app/static/css/andromeda.css
+++ b/app/static/css/andromeda.css
@@ -41,6 +41,10 @@
     max-height: 150px;
   }
 
+  .andromeda .modal-messages {
+    max-height: 80px;
+  }
+
   .andromeda .empty-row {
     height: 5px;
   }
